--- a/inventory.ini
+++ b/inventory.ini
@@ -1,8 +1,8 @@
-    [control_plane]
-    10.240.0.4
-    10.240.0.5
+[control_plane]
+10.240.0.4  master=true
+10.240.0.5
 
-    [data_plane]
-    10.240.0.6
+[data_plane]
+10.240.0.6
 
-    [backup]
+[backup]
