Add common role

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
 [control_plane]
-10.240.0.4  master=true
-10.240.0.5
+10.240.0.4  initiated=false master=true
+10.240.0.5  initiated=false
 
 [data_plane]
 10.240.0.6
