Add vault encrypted data

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
-load_balancer_address: 10.240.0.2
+loadbalancer_address: ["10.240.0.2", "master-ansible"]
 join_cluster_port: 9345
 apiserver_port: 6443
