--- a/inventory.ini
+++ b/inventory.ini
@@ -1,8 +1,8 @@
 [control_plane]
-10.240.0.4  initiated=false master=true
-10.240.0.5  initiated=false
+10.240.0.4  initialized=false master=true
+10.240.0.5  initialized=false
+10.240.0.6  initialized=false
 
 [data_plane]
-10.240.0.6
 
 [backup]
