--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,9 +1,10 @@
 ---
 - name: Setup Load balancer
   hosts: localhost
-  tasks:
-    - name: Install Haproxy on local hosts
-      ansible.builtin.apt:
-        state: present
-        name: haproxy
-        update_cache: true
+  roles:
+    - haproxy
+
+- name: Setup Rke2 serv
+  hosts: control_plane
+  roles:
+    - rke2/server
