use hostname in inventory

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,7 @@
 [control_plane]
-10.240.0.4  initialized=false master=true
-10.240.0.5  initialized=false
-10.240.0.6  initialized=false
+control-plane-1 network_ip=10.240.0.4  initialized=false master=true
+control-plane-2 network_ip=10.240.0.5  initialized=false
+control-plane-3 network_ip=10.240.0.6  initialized=false
 
 [data_plane]
 
