--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -12,5 +12,5 @@
     - name: Initialize Haproxy Config
       ansible.builtin.template:
         mode: "700"
-        src: haproxy.cfg
+        src: haproxy.cfg.j2
         dest: /etc/haproxy/haproxy.cfg
