Create rke2 cluster without bug

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,7 @@
 [control_plane]
-control-plane-1 network_ip=10.240.0.4  initialized=false master=true
-control-plane-2 network_ip=10.240.0.5  initialized=false
-control-plane-3 network_ip=10.240.0.6  initialized=false
+control-plane-1 network_ip=10.240.0.4 master=true
+control-plane-2 network_ip=10.240.0.5 master=false
+control-plane-3 network_ip=10.240.0.6 master=false
 
 [data_plane]
 
