--- a/roles/haproxy/handlers/main.yml
+++ b/roles/haproxy/handlers/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: Enable Haproxy Service
+  become: true
   ansible.builtin.service:
     name: haproxy
-    state: started
-    enable: true
+    state: restarted
+    enabled: true
