--- a/roles/rke2/server/handlers/main.yml
+++ b/roles/rke2/server/handlers/main.yml
@@ -1,5 +1,7 @@
 ---
 - name: Start rke2-server service
+  become: true
   ansible.builtin.service:
     name: rke2-server
     state: restarted
+    enabled: true
