--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -4,3 +4,4 @@ join_cluster_port: 9345
 apiserver_port: 6443
 cluster_token: fbf77b7e4e40d763ad4df32ec9e02d877b112eab
 user: k8s
+kube_config_directory: /home/{{ user }}/.kube
