--- a/roles/rke2/server/handlers/main.yml
+++ b/roles/rke2/server/handlers/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Debug info
+  ansible.builtin.debug:
+    msg: Handler ok
+    
 - name: Start rke2-server service
   become: true
   ansible.builtin.service:
