--- a/inventory.ini
+++ b/inventory.ini
@@ -4,5 +4,7 @@ control-plane-2 network_ip=10.240.0.5 master=false
 control-plane-3 network_ip=10.240.0.6 master=false
 
 [data_plane]
+data-plane-1 network_ip=10.240.0.7
+data-plane-2 network_ip=10.240.0.8
 
 [backup]
