Start server instead restart

--- a/roles/rke2/agent/tasks/main.yml
+++ b/roles/rke2/agent/tasks/main.yml
@@ -46,7 +46,7 @@
     - name: Start rke2-agent service
       ansible.builtin.service:
         name: rke2-agent
-        state: restarted
+        state: started
         enabled: true
 
     
