--- a/roles/rke2/server/tasks/main.yml
+++ b/roles/rke2/server/tasks/main.yml
@@ -42,7 +42,7 @@
       become: true
       ansible.builtin.service:
         name: rke2-server
-        state: restarted
+        state: started
         enabled: true
 
     - name: Wait for port 9345 to become open on the host, don't start checking for 10 seconds
@@ -55,5 +55,5 @@
   when: not master | bool
   ansible.builtin.service:
     name: rke2-server
-    state: restarted
+    state: started
     enabled: true
