Add public domain name

--- a/roles/apps/rancher/defaults/main.yml
+++ b/roles/apps/rancher/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
 release_name: "rancher"
 release_namespace: "cattle-system"
-rancher_hostname: "{{ loadbalancer_public_address }}.sslip.io"
+rancher_hostname: "{{ public_domain_name }}"
 rancher_bootstrapPassword: dimanche54
 rancher_ingress_tls_source: letsEncrypt
 rancher_letsEncrypt_email: edy.koffi@data3354.com
-rancher_letsEncrypt_ingress_class: haproxy
+rancher_letsEncrypt_ingress_class: nginx
