Add monitoring stack installation

--- a/apps.yml
+++ b/apps.yml
@@ -8,3 +8,13 @@
   hosts: localhost
   roles:
     - name: apps/rancher
+
+- name: Install monitoring stack
+  hosts: localhost
+  roles:
+    - name: apps/monitoring
+
+- name: Install storage proviser (longhorn)
+  hosts: localhost
+  roles:
+    - name: apps/storage
