--- a/apps.yml
+++ b/apps.yml
@@ -3,6 +3,7 @@
   hosts: localhost
   roles:
     - name: apps/cert_manager
+    - name: apps/prerequises
 
 - name: Install rancher admin
   hosts: localhost
