--- a/roles/apps/storage/meta/main.yml
+++ b/roles/apps/storage/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  role_name: prometheus_stack
+  role_name: storage_provider
   author: data354
-  description: A set of settings and variables for monitoring stack deployment
+  description: A set of settings and variables for storage provider deployment
   license: MIT
   min_ansible_version: "2.10"
   platforms:
