--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -24,3 +24,4 @@
     - name: Set haproxy config directory
       ansible.builtin.command:
         cmd: haproxy -f {{ haproxy_config_dir }}
+        # changed_when: false
