--- a/roles/prerequises/tasks/main.yml
+++ b/roles/prerequises/tasks/main.yml
@@ -6,7 +6,7 @@
       ansible.builtin.apt:
         state: present
         name: open-iscsi
-        update_cache: true
+        force: true
 
     - name: Active iscsid service
       ansible.builtin.service:
