--- a/roles/rke2/server/tasks/main.yml
+++ b/roles/rke2/server/tasks/main.yml
@@ -53,6 +53,7 @@
 - name: Run secondary server service
   become: true
   when: not master | bool
+  ignore_errors: true
   ansible.builtin.service:
     name: rke2-server
     state: started
