Add local plabook in main playbook

--- a/main.playbook.yml
+++ b/main.playbook.yml
@@ -2,6 +2,9 @@
 - name: Cluster
   ansible.builtin.import_playbook: cluster.playbook.yml
 
+- name: Local
+  ansible.builtin.import_playbook: local.playbook.yml
+
 - name: Prerequises
   ansible.builtin.import_playbook: prerequises.playbook.yml
 
