--- a/roles/kube_client/tasks/main.yml
+++ b/roles/kube_client/tasks/main.yml
@@ -27,7 +27,15 @@
         regexp: '127\.0\.0\.1'
         replace: '{{ loadbalancer_addresses[0] }}'
 
-- name: Install Kubectl
+- name: Install Kubectl on Debian system
+  when: ansible_facts['os_family'] == "Debian"
+  become: true
+  ansible.builtin.apt:
+    name: kubectl
+    state: present
+
+- name: Install Kubectl on RedHat system
+  when: ansible_facts['os_family'] == "RedHat"
   become: true
   ansible.builtin.apt:
     name: kubectl
