--- a/roles/prerequises/tasks/main.yml
+++ b/roles/prerequises/tasks/main.yml
@@ -2,11 +2,18 @@
 - name: Open-iscsi
   become: true
   block:
-    - name: Install open-iscsi
+    - name: Install open-iscsi on Debian
+      when: ansible_facts['os_family'] == "Debian"
       ansible.builtin.apt:
         state: present
         name: open-iscsi
         force: true
+    
+    - name: Install open-iscsi on Redhat
+      when: ansible_facts['os_family'] == "RedHat"
+      ansible.builtin.yum:
+        state: present
+        name: open-iscsi
 
     - name: Active iscsid service
       ansible.builtin.service:
