--- a/roles/rke2/server/tasks/main.yml
+++ b/roles/rke2/server/tasks/main.yml
@@ -45,7 +45,7 @@
         state: started
         enabled: true
 
-    - name: Wait for port 9345 to become open on the host, don't start checking for 10 seconds
+    - name: Wait for port 9345 to become open on the host
       ansible.builtin.wait_for:
         host: control-plane-1
         port: 9345
