Wait for 30s before connect node to the cluster

--- a/roles/rke2/server/tasks/main.yml
+++ b/roles/rke2/server/tasks/main.yml
@@ -58,7 +58,7 @@
 - name: Run secondary server service
   become: true
   when: not master | bool
-  ignore_errors: true
+  # ignore_errors: true
   ansible.builtin.service:
     name: rke2-server
     state: started
