--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -9,3 +9,6 @@ user: k8s
 kube_config_directory: /home/{{ user }}/.kube
 install_rancher: true
 install_longhorn: true
+k8s_servive_nodeport:
+  - name: airflow-ui
+    port: 30000
