--- a/roles/apps/airflow/defaults/main.yml
+++ b/roles/apps/airflow/defaults/main.yml
@@ -1,4 +1,8 @@
 ---
 pr_key_file: "/home/{{ user }}/.ssh/id_rsa"
-release_name: "rancher"
-release_namespace: "cattle-system"
+release_name: "stack"
+release_namespace: "airflow"
+dags_repo: "ssh://git@github.com/data354/Data-stack.git"
+sshKeysecret: ""
+subpath: "airflow/dags"
+tag: "v5"
