--- a/roles/rke2/server/tasks/main.yml
+++ b/roles/rke2/server/tasks/main.yml
@@ -40,8 +40,10 @@
   block:
     - name: Start rke2-server service
       become: true
-      ansible.builtin.cmd:
-        cmd: systemctl start rke2-server
+      ansible.builtin.service:
+        name: rke2-server
+        state: started
+        enabled: true
 
     - name: Wait for port 9345 to become open on the host
       ansible.builtin.wait_for:
@@ -51,5 +53,7 @@
 - name: Run secondary server service
   become: true
   when: not master | bool
-  ansible.builtin.command:
-    cmd: systemctl start rke2-server
+  ansible.builtin.service:
+    name: rke2-server
+    state: started
+    enabled: true
