Update airflow config

--- a/roles/apps/airflow/defaults/main.yml
+++ b/roles/apps/airflow/defaults/main.yml
@@ -3,6 +3,7 @@ pr_key_file: "/home/{{ user }}/.ssh/id_rsa"
 release_name: "stack"
 release_namespace: "airflow"
 dags_repo: "ssh://git@github.com/data354/Data-stack.git"
-sshKeysecret: ""
 subpath: "airflow/dags"
 tag: "v5"
+img_registry: "europe-west9-docker.pkg.dev/dev-clients-307710/media54/airflow"
+sshKeySecret: "airflow-git-secret"
