begin idempotency process

--- a/apps.playbook.yml
+++ b/apps.playbook.yml
@@ -1,16 +1,28 @@
 ---
+- name: Install helm plugin diff
+  hosts: localhost
+  gather_facts: no
+  tasks:
+    - name: Install helm plugin diff
+      failed_when: false
+      ansible.builtin.command:
+        cmd: helm plugin install https://github.com/databus23/helm-diff
+
 - name: Install apps prerequises
   hosts: localhost
+  gather_facts: no
   roles:
     - apps/cert_manager
 
 - name: Install rancher admin
   hosts: localhost
+  gather_facts: no
   roles:
     - apps/rancher
 
 - name: Install storage proviser (longhorn)
   hosts: localhost
+  gather_facts: no
   roles:
     - apps/storage
 
