--- a/roles/apps/airflow/tasks/main.yml
+++ b/roles/apps/airflow/tasks/main.yml
@@ -1,16 +1,32 @@
 ---
 - name: Create Airflow namespace
-  ansible.builtin.command:
-    cmd: kubectl create ns {{ release_namespace }}
-  register: output1
-  changed_when: output1.rc != 0
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Namespace
+      metadata:
+        name: "{{ release_namespace }}"
 
-- name: Create Secret with machine private key
+- name: Get host private key
   ansible.builtin.command:
-    cmd: kubectl create secret generic {{ sshKeySecret }} --from-file=gitSshKey={{ pr_key_file }} -n {{ release_namespace }}
+    cmd: cat {{ pr_key_file }}
   register: output2
   changed_when: output2.rc != 0
-  
+
+- name: Create Secret with machine private key
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      type: Opaque
+      data:
+        gitSshKey: "{{ output2.stdout | b64encode }}"
+      metadata:
+        name: "{{ sshKeySecret }}"
+        namespace: "{{ release_namespace }}"
+
 - name: Get host public key
   ansible.builtin.command:
     cmd: cat {{ pr_key_file }}.pub
@@ -25,37 +41,3 @@
 
       Assurer-vous d'ajouter la clé ci-dessus sur votre compte github pour créer la connection avec Airflow.
       Une fois ceci fait, appuyer entrer pour continuer l'installation.
-
-- name: Install Airflow
-  block:
-    - name: Add the Airflow Helm repository
-      ansible.builtin.command:
-        cmd: helm repo add stack https://data354.github.io/Helmschart354/Stack/
-
-    - name: Update your local Helm chart repository cache
-      ansible.builtin.command:
-        cmd: helm repo update
-
-    - name: Install the airflow Helm chart
-      ansible.builtin.command:
-        cmd: |
-          helm install {{ release_name }} stack/modernstack 
-          --namespace {{ release_namespace }}
-          --set postgres.enabled=true 
-          --set airflow.enabled=true 
-          --set airflow.dags.gitSync.branch=master 
-          --set airflow.dags.gitSync.enabled=true 
-          --set airflow.dags.gitSync.repo={{ dags_repo }}
-          --set airflow.dags.gitSync.sshKeySecret={{ sshKeySecret }}
-          --set airflow.dags.gitSync.subPath={{ subpath }} 
-          --set airflow.images.airflow.repository={{ img_registry }}
-          --set airflow.images.airflow.tag={{ tag }}
-          --debug
-
-    - name: Create cluster role binding
-      ansible.builtin.command:
-        cmd: |
-          kubectl create clusterrolebinding service-all-pod
-          --namespace {{ release_namespace }}
-          --clusterrole=service-all 
-          --serviceaccount={{ release_namespace }}:{{ release_name }}-airflow-worker
