--- a/roles/apps/cert_manager/tasks/main.yml
+++ b/roles/apps/cert_manager/tasks/main.yml
@@ -3,14 +3,18 @@
   ansible.builtin.command:
     cmd: kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/{{ chart_version }}/cert-manager.crds.yaml
 
-- name: Add the Jetstack Helm repository
-  ansible.builtin.command:
-    cmd: helm repo add jetstack https://charts.jetstack.io
+- name: Deploy Cert manager
+  block:
+    - name: Add the Jetstack Helm repository
+      kubernetes.core.helm_repository:
+        name: jetstack
+        repo_url: "https://charts.jetstack.io"
 
-- name: Update your local Helm chart repository cache
-  ansible.builtin.command:
-    cmd: helm repo update
-
-- name: Install the cert-manager Helm chart
-  ansible.builtin.command:
-    cmd: helm install {{ release_name }} jetstack/cert-manager --namespace {{ release_namespace }} --create-namespace --replace --version {{ chart_version }}
+    - name: Install the cert-manager Helm chart
+      kubernetes.core.helm:
+        name: "{{ release_name }}"
+        chart_ref: jetstack/cert-manager
+        release_namespace: "{{ release_namespace }}"
+        create_namespace: true
+        chart_version: "{{ chart_version }}"
+        update_repo_cache: true
