--- a/roles/apps/rancher/tasks/main.yml
+++ b/roles/apps/rancher/tasks/main.yml
@@ -1,24 +1,22 @@
 ---
-- name: Install Rancher UI Admin
+- name: Deploy Rancher UI Admin
   when: install_rancher
   block:
     - name: Add the Rancher Helm repository
-      ansible.builtin.command:
-        cmd: helm repo add rancher-stable https://releases.rancher.com/server-charts/stable
-
-    - name: Update your local Helm chart repository cache
-      ansible.builtin.command:
-        cmd: helm repo update
+      kubernetes.core.helm_repository:
+        name: rancher-stable
+        repo_url: "https://releases.rancher.com/server-charts/stable"
 
     - name: Install the rancher Helm chart
-      ansible.builtin.command:
-        cmd: |
-          helm install {{ release_name }} rancher-stable/rancher
-          --namespace {{ release_namespace }}
-          --create-namespace
-          --replace
-          --set hostname={{ rancher_hostname }}
-          --set bootstrapPassword={{ rancher_bootstrapPassword }}
-          --set ingress.tls.source={{ rancher_ingress_tls_source }}
-          --set letsEncrypt.email={{ rancher_letsEncrypt_email }}
-          --set letsEncrypt.ingress.class={{ rancher_letsEncrypt_ingress_class }}
+      kubernetes.core.helm:
+        name: "{{ release_name }}"
+        chart_ref: rancher-stable/rancher
+        release_namespace: "{{ release_namespace }}"
+        create_namespace: true
+        update_repo_cache: true
+        values:
+          hostname={{ rancher_hostname }}
+          bootstrapPassword={{ rancher_bootstrapPassword }}
+          ingress.tls.source={{ rancher_ingress_tls_source }}
+          letsEncrypt.email={{ rancher_letsEncrypt_email }}
+          letsEncrypt.ingress.class={{ rancher_letsEncrypt_ingress_class }}
