--- a/roles/apps/storage/tasks/main.yml
+++ b/roles/apps/storage/tasks/main.yml
@@ -1,15 +1,16 @@
 ---
-- name: Install Longhorn Provider strorage
+- name: Deploy Longhorn Provider strorage
   when: install_longhorn
   block:
     - name: Add the Longhorn Helm repository
-      ansible.builtin.command:
-        cmd: helm repo add longhorn https://charts.longhorn.io
+      kubernetes.core.helm_repository:
+        name: longhorn
+        repo_url: "https://charts.longhorn.io"
 
-    - name: Update your local Helm chart repository cache
-      ansible.builtin.command:
-        cmd: helm repo update
-
-    - name: Install the prometheus-kube Helm chart
-      ansible.builtin.command:
-        cmd: helm install {{ release_name }} longhorn/longhorn --namespace {{ release_namespace }} --create-namespace
+    - name: Deploy the Longhorn Helm chart
+      kubernetes.core.helm:
+        name: "{{ release_name }}"
+        chart_ref: longhorn/longhorn
+        release_namespace: "{{ release_namespace }}"
+        create_namespace: true
+        update_repo_cache: true
