Add airflow task installation

--- a/roles/apps/airflow/defaults/main.yml
+++ b/roles/apps/airflow/defaults/main.yml
@@ -5,5 +5,5 @@ release_namespace: "airflow"
 dags_repo: "ssh://git@github.com/data354/Data-stack.git"
 subpath: "airflow/dags"
 tag: "v5"
-img_registry: "europe-west9-docker.pkg.dev/dev-clients-307710/media54/airflow"
+img_registry: "yasminekd/airflow-sim"
 sshKeySecret: "airflow-git-secret"
