Add airflow task installation

--- a/roles/apps/airflow/defaults/main.yml
+++ b/roles/apps/airflow/defaults/main.yml
@@ -6,4 +6,5 @@ dags_repo: "ssh://git@github.com/data354/Data-stack.git"
 subpath: "airflow/dags"
 tag: "v5"
 img_registry: "yasminekd/airflow-sim"
+stack_repo: "https://data354.github.io/Helmschart354/Stack/"
 sshKeySecret: "airflow-git-secret"
