--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -9,6 +9,7 @@ user: k8s
 kube_config_directory: /home/{{ user }}/.kube
 install_rancher: true
 install_longhorn: true
+install_airflow: true
 k8s_services_nodeport:
   - name: airflow-ui
     port: 30000
