--- a/roles/apps/rancher/defaults/main.yml
+++ b/roles/apps/rancher/defaults/main.yml
@@ -5,4 +5,5 @@ rancher_hostname: "{{ public_domain_name }}"
 rancher_bootstrapPassword: dimanche54
 rancher_ingress_tls_source: letsEncrypt
 rancher_letsEncrypt_email: edy.koffi@data3354.com
+rancher_letsEncrypt_env: staging
 rancher_letsEncrypt_ingress_class: nginx
