--- a/roles/apps/rancher/tasks/main.yml
+++ b/roles/apps/rancher/tasks/main.yml
@@ -20,3 +20,4 @@
           ingress.tls.source={{ rancher_ingress_tls_source }}
           letsEncrypt.email={{ rancher_letsEncrypt_email }}
           letsEncrypt.ingress.class={{ rancher_letsEncrypt_ingress_class }}
+          letsEncrypt.environment={{ rancher_letsEncrypt_env }}
