--- a/roles/apps/monitoring/defaults/main.yml
+++ b/roles/apps/monitoring/defaults/main.yml
@@ -1,9 +1,3 @@
 ---
-release_name: "rancher"
-release_namespace: "cattle-system"
-rancher_hostname: "{{ public_domain_name }}"
-rancher_bootstrapPassword: dimanche54
-rancher_ingress_tls_source: letsEncrypt
-rancher_letsEncrypt_email: edy.koffi@data3354.com
-rancher_letsEncrypt_env: staging
-rancher_letsEncrypt_ingress_class: nginx
+release_name: "cluster-monitoring"
+release_namespace: "rancher-monitoring"
